# intel_image_grabber

./: CMakeLists.txt  CMakeLists.txt~  readme.md
cmake/librealsense/: FindLibRealSense.cmake
config/: config.toml  config.toml~
src/: CMakeLists.txt  snapshot.cpp  snapshot.cpp~
